--- a/index.html
+++ b/index.html
@@ -1,32 +1,47 @@
 <meta name='viewport' content='width=device-width, initial-scale=1'/><!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>SHREE SHAKTI AMUL STOCK</title>
+
+  <!-- Firebase SDKs -->
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+
   <style>
-    body { font-family: Arial, sans-serif; padding: 10px; text-align: center; }
-    h2 { margin-bottom: 5px; }
-    .row { display: flex; justify-content: center; margin: 5px 0; }
-    .label { width: 180px; text-align: left; }
-    select { margin: 0 5px; }
-    button { margin: 10px; padding: 8px 16px; border-radius: 8px; border: none; cursor: pointer; }
-    #saveBtn { background: #4CAF50; color: white; }
-    #resetBtn { background: #f44336; color: white; }
+    body { font-family: Arial, sans-serif; padding: 12px; text-align: center; }
+    h2 { margin: 0 0 6px; color: red; }
+    #date { margin: 0 0 12px; }
+    .header-row { display: flex; justify-content: center; gap: 8px; margin: 6px 0; font-weight: bold; }
+    .row { display: flex; justify-content: center; align-items: center; gap: 8px; margin: 6px 0; color: black; }
+    .label { width: 220px; text-align: left; }
+    select { padding: 4px; }
+    button { margin: 10px 6px; padding: 8px 16px; border: 0; border-radius: 8px; cursor: pointer; }
+    #saveBtn { background: #4caf50; color: #fff; }
+    #resetBtn { background: #f44336; color: #fff; }
+    #status { margin-top: 8px; font-size: 14px; }
   </style>
 </head>
 <body>
-
   <h2>SHREE SHAKTI AMUL STOCK</h2>
   <p id="date"></p>
 
+  <!-- Gujarati header row -->
+  <div class="header-row">
+    <div class="label">પ્રોડક્ટ</div>
+    <div style="width:60px;">કેરેટ</div>
+    <div style="width:60px;">નંગ</div>
+  </div>
+
   <div id="products"></div>
+
   <button id="saveBtn" onclick="saveStock()">Save Stock</button>
   <button id="resetBtn" onclick="resetStock()">Reset</button>
+  <div id="status"></div>
 
   <script>
-    // 👉 અહીં Firebase config paste કરવો
+    // ✅ તમારી Firebase config અહીં પેસ્ટ કરો
     var firebaseConfig = {
       apiKey: "YOUR_API_KEY",
       authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
@@ -37,56 +52,84 @@
       appId: "APP_ID"
     };
     firebase.initializeApp(firebaseConfig);
-    var db = firebase.database();
+    const auth = firebase.auth();
+    const db   = firebase.database();
 
-    // 11 products list (તારા મુજબ)
-    var products = [
+    // Products
+    const products = [
       "ગોલ્ડ 500 ML","ચાઇ માજા 500 ML","T સ્પે 1 લી","છાસ 680 ML","છાસ 300 ML",
       "મસ્તી 85 ગ્રામ","મસ્તી 200 ગ્રામ","મસ્તી 1kg","દહીં 800 ગ્રામ","મસ્તી 5 kg","ગોલ્ડ 6 લી"
     ];
 
-    // Generate UI
-    let container = document.getElementById("products");
+    // Build UI
+    const container = document.getElementById("products");
     products.forEach(p => {
-      let div = document.createElement("div");
-      div.className = "row";
-      div.innerHTML = `
+      const row = document.createElement("div");
+      row.className = "row";
+      row.innerHTML = `
         <div class="label">${p}</div>
-        <select id="${p}_carat">${[...Array(11).keys()].map(n=>`<option>${n}</option>`).join('')}</select>
-        <select id="${p}_piece">${[...Array(51).keys()].map(n=>`<option>${n}</option>`).join('')}</select>
+        <select id="${cssId(p)}_crate">${[...Array(11).keys()].map(n=>`<option>${n}</option>`).join('')}</select>
+        <select id="${cssId(p)}_piece">${[...Array(51).keys()].map(n=>`<option>${n}</option>`).join('')}</select>
       `;
-      container.appendChild(div);
+      container.appendChild(row);
     });
 
-    // Save stock to Firebase
-    function saveStock() {
-      let today = new Date().toISOString().split('T')[0]; // yyyy-mm-dd
-      let stockData = {};
+    // Date (DD/MM/YYYY) + path (YYYY-MM-DD)
+    const d = new Date();
+    const dateText = ("0"+d.getDate()).slice(-2)+"/"+("0"+(d.getMonth()+1)).slice(-2)+"/"+d.getFullYear();
+    document.getElementById("date").innerText = "તારીખ: " + dateText;
+    const todayPath = d.toISOString().split("T")[0]; // YYYY-MM-DD
+
+    // Helper to make safe IDs
+    function cssId(name){ return name.replace(/\s+/g,'_').replace(/[^\w]/g,''); }
+
+    // 🔐 Anonymous sign-in, then attach real-time listener
+    auth.signInAnonymously().then(() => {
+      setStatus("Signed in (anonymous). Loading data...");
+      // Load existing values (and keep in sync live)
+      db.ref("stock/"+todayPath).on("value", snap => {
+        const data = snap.val() || {};
+        products.forEach(p => {
+          const base = cssId(p);
+          const cSel = document.getElementById(base+"_crate");
+          const pSel = document.getElementById(base+"_piece");
+          const saved = data[p] || { crate: 0, piece: 0 };
+          cSel.value = String(saved.crate || 0);
+          pSel.value = String(saved.piece || 0);
+        });
+        setStatus("Live data synced.");
+      });
+    }).catch(err => {
+      console.error(err);
+      setStatus("Auth error: " + err.message);
+    });
+
+    // Save
+    function saveStock(){
+      const payload = {};
       products.forEach(p => {
-        stockData[p] = {
-          carat: document.getElementById(p+"_carat").value,
-          piece: document.getElementById(p+"_piece").value
+        const base = cssId(p);
+        payload[p] = {
+          crate: Number(document.getElementById(base+"_crate").value),
+          piece: Number(document.getElementById(base+"_piece").value)
         };
       });
-      db.ref("stock/"+today).set(stockData);
-      alert("✅ Stock Saved!");
+      db.ref("stock/"+todayPath).set(payload)
+        .then(()=> setStatus("✅ Stock Saved"))
+        .catch(e => setStatus("❌ Save failed: " + e.message));
     }
 
-    // Reset stock values (without saving)
-    function resetStock() {
+    // Reset
+    function resetStock(){
       products.forEach(p => {
-        document.getElementById(p+"_carat").selectedIndex = 0;
-        document.getElementById(p+"_piece").selectedIndex = 0;
+        const base = cssId(p);
+        document.getElementById(base+"_crate").value = "0";
+        document.getElementById(base+"_piece").value = "0";
       });
-      alert("♻️ Stock Reset (Not Saved)");
+      setStatus("♻️ Reset (Not saved)");
     }
 
-    // Show date in DD/MM/YYYY
-    let d = new Date();
-    document.getElementById("date").innerText =
-      "Date: " + ("0"+d.getDate()).slice(-2) + "/" +
-      ("0"+(d.getMonth()+1)).slice(-2) + "/" +
-      d.getFullYear();
+    function setStatus(msg){ document.getElementById("status").innerText = msg; }
   </script>
 </body>
 </html>
