--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div class="card">
       <div class="header">
         <div>
-          <h1>SHREE SHAKTI AMUL STOCK <span class="badge">વેબ</span></h1>
+          <h1>SHREE SHAKTI AMUL STOCK <span class="badge"></span></h1>
           <div class="status" id="status">લોડ થઈ રહ્યું છે…</div>
         </div>
         <div style="text-align:right">
@@ -92,7 +92,6 @@
   </div>
 
   <div class="footer">
-    • ત્રણેય વ્યક્તિઓ માટે રિયલટાઇમ સિંક. • ઑફલાઇન સપોર્ટ. • બીજી તારીખે નવો સ્ટોક માટે RESET દબાવો.
   </div>
 </div>
 
